Optimize GPU fitness reduction; refactor CUDA macro
Improve GPU fitness evaluation performance by replacing CPU-side
summation of individual errors with a parallel reduction kernel
executed entirely on the GPU. This significantly reduces host-device
memory transfers and leverages GPU parallelism for the final sum.

Refactor the GPU acceleration macro from `GPU_ACCELERATION` to
`USE_GPU_ACCELERATION_DEFINED_BY_CMAKE`. The macro is now defined
publicly by CMake, ensuring consistent build configurations and
removing the need for manual definition in `Globals.h`.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -46,8 +46,7 @@ target_link_libraries(SymbolicRegressionGP PUBLIC
 set(CMAKE_CUDA_PROPAGATE_HOST_FLAGS ON)
 
 # Definir macros de preprocesador
-target_compile_definitions(SymbolicRegressionGP PRIVATE "GPU_ACCELERATION")
+target_compile_definitions(SymbolicRegressionGP PUBLIC "USE_GPU_ACCELERATION_DEFINED_BY_CMAKE")
 
 # SECCIÓN ELIMINADA: La sección target_compile_options fue removida.
 # CMake y Visual Studio manejarán los flags de Debug/Release automáticamente.
-
