feat: Introduce `Globals.h` for centralized configuration and `ExpressionTree.cpp` for expression evaluation, and update `.gitignore` with new exclusions.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,15 @@ TargetDirectories.txt
 .ninja_deps
 .ninja_log
 build.ninja
+
+# Output files
+outputs/
+
+# Temporary/test files
+hh.py
+
+# Pickle files
+*.pkl
+
+# Backup files
+*.bak
