--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -100,26 +100,31 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
         set_property(TARGET SymbolicRegressionGP PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
     endif()
 endif()
-# --- Test Suite Executable ---
-add_executable(TestOperators 
-    src/TestOperators.cpp
-    src/ExpressionTree.cpp
-    src/Fitness.cpp
-    src/GeneticOperators.cpp
-    src/AdvancedFeatures.cpp
-    src/GeneticAlgorithm.cpp
-)
+# --- Test Suite Executable (Only build if TestOperators.cpp exists) ---
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/TestOperators.cpp")
+    add_executable(TestOperators 
+        src/TestOperators.cpp
+        src/ExpressionTree.cpp
+        src/Fitness.cpp
+        src/GeneticOperators.cpp
+        src/AdvancedFeatures.cpp
+        src/GeneticAlgorithm.cpp
+    )
 
-if(CMAKE_CUDA_COMPILER)
-    target_compile_definitions(TestOperators PUBLIC "USE_GPU_ACCELERATION_DEFINED_BY_CMAKE")
-    target_sources(TestOperators PRIVATE src/FitnessGPU.cu)
-    target_include_directories(TestOperators PUBLIC ${CUDA_INCLUDE_DIRS})
-    if(TARGET CUDA::cudart)
-        target_link_libraries(TestOperators PUBLIC CUDA::cudart)
-    else()
-        target_link_libraries(TestOperators PUBLIC ${CUDA_LIBRARIES})
+    if(CMAKE_CUDA_COMPILER)
+        target_compile_definitions(TestOperators PUBLIC "USE_GPU_ACCELERATION_DEFINED_BY_CMAKE")
+        target_sources(TestOperators PRIVATE src/FitnessGPU.cu)
+        target_include_directories(TestOperators PUBLIC ${CUDA_INCLUDE_DIRS})
+        if(TARGET CUDA::cudart)
+            target_link_libraries(TestOperators PUBLIC CUDA::cudart)
+        else()
+            target_link_libraries(TestOperators PUBLIC ${CUDA_LIBRARIES})
+        endif()
     endif()
-endif()
 
-target_include_directories(TestOperators PUBLIC src)
-target_link_libraries(TestOperators PUBLIC OpenMP::OpenMP_CXX)
+    target_include_directories(TestOperators PUBLIC src)
+    target_link_libraries(TestOperators PUBLIC OpenMP::OpenMP_CXX)
+    message(STATUS "TestOperators target: ENABLED")
+else()
+    message(STATUS "TestOperators target: SKIPPED (src/TestOperators.cpp not found)")
+endif()
