feat: mejora la gestión de archivos y la detección del binario GP
- Agrega `example_data` al directorio de creación en Colab.
- Actualiza `.gitignore` para ignorar archivos de datos y resultados generados, pero excluye los datos de ejemplo requeridos.
- Refactoriza la detección de la ruta del binario GP para mayor robustez en diferentes sistemas operativos y estructuras de directorios.

--- a/AlphaSymbolic/.gitignore
+++ b/AlphaSymbolic/.gitignore
@@ -18,3 +18,31 @@ test_output.txt
 # System
 .DS_Store
 Thumbs.db
+
+# Data & Results
+learned_formulas.csv
+feynman_*_results.csv
+feynman_results.csv
+pattern_memory.json
+*.csv
+
+# Exceptions for required data
+!data/*.csv
+!example_data/*.csv
+
+# Large Data Files
+example_data/*.txt
+*.txt
+!requirements.txt
+
+# Tests (Root temporary scripts only)
+/test_*.py
+/test_result.txt
+/test_output.txt
+/test_log.txt
+/reproduce_hos.py
+/debug_hall_of_shame.py
+
+# Keep the official tests directory
+!tests/
+/tests/__pycache__/
