--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,9 @@ __pycache__/
 .ipynb_checkpoints/
 venv/
 env/
+.venv/
 .env
+.pytest_cache/
 
 # Data, Caches & Logs
 logs/
@@ -61,6 +63,13 @@ cache/
 *.pkl
 *.bak
 *.temp
+git_status.txt
+gitignore_content.txt
+root_files.txt
+untracked_not_ignored.txt
+files_list.txt
+untracked_not_ignored.txt
+*.tmp
 
 # Project specific
 AlphaSymbolic/data/*.json
